--- a/app/Resources/views/task/show.html.twig
+++ b/app/Resources/views/task/show.html.twig
@@ -5,8 +5,12 @@
     <link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
 {% endblock %}
 
-{% block title %} Show task {% endblock %}
+{% block title %}Show Task{% endblock %}
 
 {% block body %}
-    show task
+    <ul>
+        <li>{{ task.name }}</li>
+        <li>{{ task.dataCriacao | date('d/m/Y') }} às {{ task.dataCriacao | date('H:i:s') }} </li>
+        <li>{{ task.status }}</li>
+    </ul>
 {% endblock %}
