--- a/app/Resources/views/task/index.html.twig
+++ b/app/Resources/views/task/index.html.twig
@@ -16,12 +16,15 @@
 
     <ul>
         {% for task in tasks %}
+            <form action="{{ path('showTask') }}" method="post">
 
         <li>
             <a href="{{ path('showTask', {'id': task.id}) }}">
                 <button type="button" class="btn btn-lg btn-info">{{ task.name }} ( {{ task.dataCriacao | date('d/m/Y') }} )</button>
             </a>
         </li>
+            </form>
+
         {% endfor %}
     </ul>
     <div class="alert alert-success" role="alert">
