--- a/app/Resources/views/Login/index.html.twig
+++ b/app/Resources/views/Login/index.html.twig
@@ -39,15 +39,11 @@
     <div class="login-box-body">
         <p class="login-box-msg">Sign in to start your session</p>
 
-        <form action="../../index2.html" method="post">
-            <div class="form-group has-feedback">
-                <input type="email" class="form-control" placeholder="Email">
-                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input type="password" class="form-control" placeholder="Password">
-                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-            </div>
+        <form action="" method="post">
+            {{ form_start(form) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.password) }}
+            {{ form_end(form) }}
             <div class="row">
                 <div class="col-xs-4" style="float: right">
                     <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
